--- a/client/src/components/SignForms/style.css
+++ b/client/src/components/SignForms/style.css
@@ -7,10 +7,32 @@
   width: 100%;
   margin: 6vh auto;
 }
-form {
+.form {
   min-height: 40vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+}
+.Form{
+  display: flex;
+  height: 15vh;
+  width: 100%;
+  justify-content: space-between;
+  flex-direction: column;
+ align-items: center;
+}
+.MuiButton-label{
+  font-size: 1.3rem;
+}
+.input{
+  margin-bottom: 2vh !important;
+}
+.MuiInputBase-formControl{
+  height: 8vh;
+}
+.css-j204z7-MuiFormControlLabel-root{
+  -webkit-align-items: end !important; 
+  margin-left: 10px !important;
+  margin-right: 0px !important;
 }
