--- a/client/src/pages/Register/style.css
+++ b/client/src/pages/Register/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   box-sizing: border-box;
 }
-.tab-container {
+.tab-container2 {
   width: 35%;
   margin: 12vh auto;
 }
@@ -14,10 +14,11 @@
   padding: 1px !important;
 }
 .MuiButtonBase-root {
-  font-size: 1rem !important;
+  font-size: .8rem !important;
   margin-bottom: 2vh !important;
 }
 .Mui-selected {
   font-weight: bold !important;
-  font-size: 1.4rem !important;
+  font-size: 1.2rem !important;
+  border-bottom: 1px solid #A794C1 !important;
 }
