--- a/client/src/components/ProductsContainer/style.css
+++ b/client/src/components/ProductsContainer/style.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 30px;
+  margin: 40px 0;
 }
 .product-pagination ul {
   justify-content: center;
