--- a/client/src/components/Tab/style.css
+++ b/client/src/components/Tab/style.css
@@ -10,10 +10,14 @@
 .Mui-selected {
   background-color: #FAF6FF !important;
   border-radius: 5px 5px 0 0 !important;
+  font-weight: 800 !important;
 }
 .css-19kzrtu {
   padding: 0 !important;
 }
 img{
   width: 100%;
+}
+.card{
+  background-color: #FAF6FF !important;
 }
